# ComfyUI-MiniCPM-o-plus

./: .gitignore  LICENSE  README.md  README_EN.md  __init__.py  pyproject.toml  requirements.txt
nodes/: minicpm_o_image.py  minicpm_o_image_analyzer.py  minicpm_o_loader.py  minicpm_o_video.py
